message NodeClock {
	required uint32 node_id = 1;
	required uint32 generation = 2;
	repeated uint64 clock = 3;
}
