import "NodeClock.proto";

message VectorClock {
	repeated NodeClock clocks = 1;
}
